# 5G

dev_ws/: CMakeLists.txt  camera_test.py  check_camera_fps.py  main.cpp  main_fast.cpp  main_fuck.cpp  raspberry_start_self.txt  record_video.py
dev_ws/models/: lr.param
dev_ws/src/: CMakeLists.txt  infer_camera.cpp  motor_test.cpp  track_line.cpp  track_line_test.cpp
dev_ws/test/: USAGE.md  test_banma.cpp  test_cone_path.cpp  test_sobel.cpp
guo_dev_ws/: CMakeLists.txt  main.cpp  main_fast.cpp  main_fast_noobs.cpp
guo_dev_ws/include/: fastestdet.hpp
guo_dev_ws/models/: main.cpp
guo_dev_ws/src/: fastestdet.cpp  fastestdet_usage.md  main.cpp  main_backup.cpp  motor_test.cpp  track_line.cpp
guo_dev_ws/test/: test_banma.cpp  test_sobel.cpp
